R401-stub: Ajout des routes manquantes + modif
